:heavy_check_mark: Сборка #9

--- a/9/styles/styles.css
+++ b/9/styles/styles.css
@@ -455,11 +455,14 @@ body {
 }
 
 .subscribe_button:hover,
-.subscribe_button:focus {
+.subscribe_button:focus,
+.search:hover,
+.search:focus {
   background-color: rgba(104, 162, 202, 1);
 }
 
-.subscribe_button:active {
+.subscribe_button:active,
+.search:active {
   color: rgba(255, 255, 255, 0.3);
 }
 
@@ -757,7 +760,7 @@ body {
 
 .control_radio:hover::before,
 .control:hover::before {
-  border: 3px solid rgba(131, 179, 211, 1);
+  box-shadow: 0 0 3px rgba(131, 179, 211, 1);
 }
 
 .control_input:checked ~ .control_radio::after {
@@ -856,7 +859,7 @@ body {
 }
 
 .button_reset:focus {
-  border: 3px solid rgba(131, 179, 211, 1);
+  box-shadow: 0 0 3px rgba(131, 179, 211, 1);
 }
 
 .button_reset:active {
@@ -914,7 +917,7 @@ body {
 .filter_card:focus,
 .filter_card_text:focus,
 .filter_text:focus {
-  border: 2px solid rgba(104, 162, 202, 1);
+  box-shadow: 0 0 2px rgba(131, 179, 211, 1);
   outline: none;
 }
 
@@ -994,7 +997,6 @@ body {
   padding: 0 14px 0 14px;
   position: relative;
   left: -18px;
-  appearance: none;
 }
 
 .select_control:hover,
@@ -1005,19 +1007,6 @@ body {
 .select_control:active {
   border: solid 2px rgba(63, 94, 114, 1);
   outline: none;
-}
-
-.cards_all::after {
-  position: absolute;
-  width: 7px;
-  height: 7px;
-  content: "";
-  border-radius: 1px;
-  border-left: 2px solid rgba(0, 0, 0, 1);
-  border-bottom: 2px solid rgba(0, 0, 0, 1);
-  transform: rotate(-46deg);
-  left: 1223px;
-  top: 543px;
 }
 
 .card_button {
@@ -1336,8 +1325,9 @@ body {
 .price_output_style_start:focus,
 .price_output_style_end:focus {
   background-color: rgba(230, 230, 230, 1);
-  border: 3px solid rgba(131, 179, 211, 1);
-  outline: none;
+
+outline: none;
+box-shadow: inset 0 0 3px rgba(131, 179, 211, 1);
 }
 
 .price_output_style_start:active,
@@ -1512,6 +1502,18 @@ body {
   padding-left: 70px;
 }
 
+.calendar {
+  position: absolute;
+  top: 182px;
+  left: 610px;
+}
+
+.calendar_off {
+  position: absolute;
+  top: 280px;
+  left: 610px;
+}
+
 .booking_form {
   margin: 0;
   padding-top: 65px;
@@ -1519,14 +1521,14 @@ body {
 
 .bookking_date {
   margin: 0;
-  padding-bottom: 48px;
+  padding-bottom: 44px;
 }
 
 .choice_input {
   background-color: rgba(242, 242, 242, 1);
   color: rgba(0, 0, 0, 1);
-  width: 420px;
-  height: 48px;
+  width: 418px;
+  height: 44px;
   border-radius: 4px;
   position: relative;
   left: 20px;
@@ -1541,16 +1543,17 @@ body {
 .choice_input_off {
   background-color: rgba(242, 242, 242, 1);
   color: rgba(0, 0, 0, 1);
-  width: 420px;
-  height: 48px;
+  width: 418px;
+  height: 44px;
   border-radius: 4px;
   position: relative;
+  top: 0;
   left: 15px;
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
   font-family: inherit;
-  padding-left: 20px;
+  padding-left: 17px;
   border-color: transparent;
 }
 
@@ -1564,61 +1567,29 @@ body {
 .choice_input_off:focus {
   background-color: rgba(230, 230, 230, 1);
   border: 3px solid rgba(131, 179, 211, 1);
+  outline: none;
 }
 
-.choice_input:invalid ~ .date_invalid {
+.date_invalid {
   content: "Мы не можем отправить вас в прошлое.";
   color: rgba(255, 87, 87, 1);
   position: absolute;
   top: 217px;
-  left: 230px;
+  left: 228px;
   font-weight: 400;
   font-size: 16px;
   line-height: 21px;
 }
 
-.choice_input_off:invalid ~ .date_invalid {
-  content: "Мы не можем отправить вас в прошлое.";
-  color: rgba(255, 87, 87, 1);
-  position: absolute;
-  top: 217px;
-  left: 230px;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 21px;
-}
-
-.choice_input:valid ~ .date_valid {
+.date_valid {
   content: "На эти даты есть свободные номера. Пока есть.";
   color: rgba(0, 0, 0, 1);
   position: absolute;
-  top: 220px;
-  left: 230px;
+  top: 316px;
+  left: 228px;
   font-weight: 400;
   font-size: 16px;
   line-height: 21px;
-}
-
-.choice_input_off:valid ~ .date_valid {
-  content: "На эти даты есть свободные номера. Пока есть.";
-  color: rgba(0, 0, 0, 1);
-  position: absolute;
-  top: 220px;
-  left: 230px;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 21px;
-}
-
-.choice_input_off:valid ~ .date_valid {
-  content: "";
-  position: absolute;
-  top: 312px;
-  left: 230px;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 21px;
-  color: rgba(51, 51, 51, 1);
 }
 
 .guests {
@@ -1629,13 +1600,13 @@ body {
   line-height: 24px;
   margin: 0;
   width: 577px;
-  padding: 12px 70px 0 70px;
+  padding: 15px 70px 0 70px;
 }
 
 .adult_number {
   display: flex;
   position: absolute;
-  top: 358px;
+  top: 360px;
   left: 190px;
   width: 111px;
   margin-left: 18px;
@@ -1653,19 +1624,24 @@ body {
 .minus {
   background-color: rgba(242, 242, 242, 1);
   color: rgba(117, 97, 87, 0.3);
-  width: 40px;
+  max-width: 40px;
   height: 48px;
-  padding: 13px 10px 13px 11px;
+  padding: 7px 9px 12px 13px;
   border-radius: 4px 0 0 4px;
   border-color: transparent;
   border: none;
+  appearance: none;
 }
 
-.minus:hover {
+.minus:hover,
+.plus:hover,
+.plus_minus_input:hover {
   color: rgba(0, 0, 0, 1);
 }
 
-.minus:focus {
+.minus:focus,
+.plus:focus,
+.plus_minus_input:focus {
   color: rgba(0, 0, 0, 1);
   outline: 3px solid rgba(130, 179, 211, 1);
 }
@@ -1673,32 +1649,24 @@ body {
 .plus {
   background-color: rgba(242, 242, 242, 1);
   color: rgba(117, 97, 87, 0.3);
-  width: 40px;
+  max-width: 40px;
   height: 48px;
-  padding: 13px 10px 13px 5px;
+  padding: 13px 13px 13px 13px;
   border-radius: 0 4px 4px 0;
   border-color: transparent;
   border: none;
 }
 
-.plus:hover {
-  color: rgba(0, 0, 0, 1);
-}
-
-.plus:focus {
-  color: rgba(0, 0, 0, 1);
-  outline: 3px solid rgba(130, 179, 211, 1);
-}
-
 .plus_minus_input {
   background-color: rgba(242, 242, 242, 1);
-  padding: 12px 6px 12px 0;
+  padding: 12px 3px 12px 2px;
   font-weight: 700;
   font-size: 18px;
   line-height: 20px;
   width: 30px;
   margin: 0;
   text-align: center;
+  border: none;
   border-radius: 0;
   border-color: transparent;
 }
@@ -1717,9 +1685,10 @@ body {
   line-height: 24px;
   border: transparent;
   margin: 60px 70px 0 70px;
-  padding: 18px 254px 18px 255px;
+  padding: 18px 254px 18px 250px;
   min-width: 69px;
 }
+
 
 .tooltip_toggle {
   width: 26px;
@@ -1769,11 +1738,9 @@ body {
   left: 118px;
 }
 
-
-.modal_container_close {
+.modal_container {
   display: none;
 }
-
 
 .visually_hidden {
   visibility: hidden;
