--- a/styles/styles.css
+++ b/styles/styles.css
@@ -150,6 +150,12 @@ body {
   background-color: rgba(117, 98, 87, 1);
 }
 
+
+.navigation_link:hover,
+.navigation_link:focus {
+  background-color: rgba(104, 162, 202, 0.3);
+}
+
 .hero {
   background-color: rgba(255, 255, 255, 1);
   margin: 0;
@@ -415,8 +421,9 @@ body {
   background-size: 100% auto;
   background-repeat: no-repeat;
   width: 100%;
-  height: 414px;
+  min-height: 414px;
   margin: 0;
+  flex-wrap: wrap;
 }
 
 .subscribe_title {
@@ -496,7 +503,7 @@ body {
 .input_button {
   display: flex;
   width: 684px;
-  padding: 0 258px 0 258px;
+  padding: 0 258px 104px 258px;
 }
 
 .page_footer {
@@ -601,10 +608,10 @@ body {
 .page_inner {
   margin: 0;
   color: rgba(255, 255, 255, 1);
-  background-size: 1200px;
+  background-size: cover;
   background-image: url("../images/catalog/background.jpg");
   background-repeat: no-repeat;
-  height: 412px;
+  min-height: 412px;
 }
 
 .page_inner_title {
@@ -643,6 +650,7 @@ body {
 .catalog_products {
   margin: 0;
   display: flex;
+  flex-wrap: wrap;
   position: absolute;
   height: 157px;
 }
@@ -921,7 +929,6 @@ body {
   outline: none;
 }
 
-
 .product_list {
   display: flex;
   flex-wrap: wrap;
@@ -932,10 +939,11 @@ body {
 
 .product_card {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   margin: 0 0 18px 18px;
   width: 340px;
-  height: 438px;
+  min-height: 438px;
   border: 1px solid rgba(230, 230, 230, 1);
   border-radius: 4px;
 }
@@ -958,6 +966,8 @@ body {
 }
 
 .product_cards_title {
+  display: flex;
+  flex-wrap: wrap;
   font-weight: 700;
   font-size: 24px;
   line-height: 28px;
@@ -1106,7 +1116,7 @@ body {
   max-width: 140px;
   height: 23px;
   text-transform: uppercase;
-  margin: 16px 20px 0 180px;
+  margin: 16px 20px 20px 180px;
   border-color: transparent;
   position: relative;
   display: flex;
@@ -1133,7 +1143,6 @@ body {
   display: flex;
   padding: 9px 22px 8px 23px;
 }
-
 
 .card_rating_two {
   background-color: rgba(242, 242, 242, 1);
@@ -1260,10 +1269,10 @@ body {
   background-color: rgba(0, 0, 0, 0.15);
   width: 1060px;
   height: 2px;
-  position: absolute;
+  position: relative;
   background-size: contain;
-  top: 1550px;
-  left: 420px;
+  top: 15px;
+  left: 17px;
 }
 
 .subscribe_title_catalog {
@@ -1289,7 +1298,7 @@ body {
 .input_button_catalog {
   display: flex;
   width: 684px;
-  margin-left: 258px;
+  padding: 0 258px 104px 258px;
 }
 
 .input_style {
@@ -1309,10 +1318,10 @@ body {
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
-  width: 34px;
+  width: 42px;
   border-radius: 4px 0 0 4px;
-  margin-right: 4px;
-  padding: 10px 0 10px 106px;
+  margin-right: 3px;
+  padding: 6px 2px 2px 96px;
   border-color: transparent;
 }
 
@@ -1322,9 +1331,9 @@ body {
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
-  width: 34px;
+  width: 42px;
+  padding: 10px 0 10px 95px;
   border-radius: 0 4px 4px 0;
-  padding: 10px 0 10px 100px;
   border-color: transparent;
 }
 
@@ -1424,7 +1433,7 @@ body {
 
 .subscribe_form_catalog {
   background-color: rgba(255, 255, 255, 1);
-  height: 414px;
+  min-height: 414px;
   margin: 0;
 }
 
@@ -1440,28 +1449,28 @@ body {
 }
 
 .modal_container {
-  position: absolute;
+  position: fixed;
+  display: flex;
   top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(242, 242, 242, 0.8)
+  background-color: rgba(242, 242, 242, 0.8);
 }
 
 .modal {
-  position: fixed;
-  margin: 0;
-  top: 393px;
-  left: 555px;
+  position: relative;
+  box-sizing: border-box;
+  margin: auto;
   background-color: rgba(255, 255, 255, 1);
   border-radius: 30px;
   box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
+  top: 215px;
 }
 
 .modal_booking {
   width: 717px;
   height: 576px;
-  position: relative;
-  margin: 0;
 }
 
 .modal_close_button {
@@ -1745,10 +1754,6 @@ body {
   position: absolute;
   top: -15px;
   left: 118px;
-}
-
-.modal_container {
-  display: none;
 }
 
 .visually_hidden {
