--- a/styles/styles.css
+++ b/styles/styles.css
@@ -150,10 +150,13 @@ body {
   background-color: rgba(117, 98, 87, 1);
 }
 
-
 .navigation_link:hover,
 .navigation_link:focus {
   background-color: rgba(104, 162, 202, 0.3);
+}
+
+.navigation_link:active {
+  color: rgba(117, 98, 87, 1);
 }
 
 .hero {
@@ -607,6 +610,8 @@ body {
 
 .page_inner {
   margin: 0;
+  display: flex;
+  flex-wrap: wrap;
   color: rgba(255, 255, 255, 1);
   background-size: cover;
   background-image: url("../images/catalog/background.jpg");
@@ -629,13 +634,16 @@ body {
   display: flex;
   margin: 0;
   width: 114px;
-  padding: 2px 1016px 40px 70px;
+  height: 25px;
+  position: absolute;
+  padding: 118px 1016px 0 70px;
 }
 
 .breadcrumbs_link {
   font-weight: 400;
   font-size: 16px;
   line-height: 21px;
+  margin: 0;
 }
 
 .breadcrumbs_home_logo {
@@ -651,8 +659,9 @@ body {
   margin: 0;
   display: flex;
   flex-wrap: wrap;
-  position: absolute;
-  height: 157px;
+  position: relative;
+  min-height: 157px;
+  top: 0;
 }
 
 .catalog_filter_title {
@@ -670,7 +679,7 @@ body {
   font-weight: 400;
   font-size: 18px;
   line-height: 23px;
-  padding: 0;
+  padding: 0 0 75px;
 }
 
 .catalog_filter_item {
@@ -685,7 +694,7 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0;
-  padding-right: 70px;
+  padding: 70px 70px 0 0;
 }
 
 .left_menu {
@@ -713,7 +722,7 @@ body {
   margin-bottom: 16px;
   margin-left: 0;
   position: relative;
-  padding: 0 0 32px 40px;
+  padding: 0 0 32px 38px;
 }
 
 .control:hover,
@@ -793,7 +802,7 @@ body {
   position: absolute;
   width: 7px;
   height: 7px;
-  top: 3px;
+  top: 6px;
   left: 6px;
   bottom: 3px;
   transform: rotate(-45deg);
@@ -802,6 +811,8 @@ body {
 .right_menu {
   margin: 0;
   display: flex;
+  flex-wrap: wrap;
+  padding-top: 70px;
   padding-left: 140.15px;
 }
 
@@ -827,9 +838,9 @@ body {
   padding: 58px 0 138px 0;
   margin: 0;
   position: absolute;
-  top: 0;
+  top: 70px;
   left: 940px;
-  bottom: 0;
+  bottom: 80px;
 }
 
 .button_apply {
@@ -1368,7 +1379,7 @@ body {
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
-  padding: 12px 0 12px 0;
+  padding: 82px 0 12px 0;
 }
 
 .price_end_output {
@@ -1380,12 +1391,12 @@ body {
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
-  padding: 10px 0 10px 0;
+  padding: 82px 0 10px 0;
 }
 
 .range {
   position: absolute;
-  top: 150px;
+  top: 220px;
 }
 
 .range_scale {
@@ -1459,18 +1470,21 @@ body {
 }
 
 .modal {
-  position: relative;
+  background-color: rgba(255, 255, 255, 1);
   box-sizing: border-box;
   margin: auto;
-  background-color: rgba(255, 255, 255, 1);
-  border-radius: 30px;
-  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
-  top: 215px;
+  width: 717px;
 }
 
 .modal_booking {
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
+  border-radius: 30px;
+  position: fixed;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 717px;
-  height: 576px;
 }
 
 .modal_close_button {
@@ -1702,7 +1716,7 @@ body {
   text-transform: uppercase;
   line-height: 24px;
   border: transparent;
-  margin: 60px 70px 0 70px;
+  margin: 60px 70px 60px 70px;
   padding: 18px 254px 18px 250px;
   min-width: 69px;
 }
@@ -1768,4 +1782,9 @@ body {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+
+.modal_container {
+  display: none;
 }
